--- a/src/style.scss
+++ b/src/style.scss
@@ -1,11 +1,20 @@
 body {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: darkslategrey;
+  background-color: rgb(164, 164, 170);
   color: white;
   text-transform: uppercase;
   //background-image: url("./assets/img/1.jpg");
+}
+.products{
+  display: flex;
+  flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.cellProducts{
+  display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: flex-start;
 }
