--- a/src/style.scss
+++ b/src/style.scss
@@ -1,9 +1,7 @@
 body {
   min-height: 100vh;
-  background-color: rgb(164, 164, 170);
-  color: white;
-  text-transform: uppercase;
-  //background-image: url("./assets/img/1.jpg");
+  background-color: rgb(223, 223, 223);
+  
 }
 .products{
   display: flex;
@@ -11,10 +9,57 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
 }
-.cellProducts{
+.header{
+  display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+}
+.basket{
+  height: 50px;
+  width: 50px;
+  background-image: url('../public/assets/svg/basket_icon.svg');
+  display: flex;
+  align-items: center;
+}
+.number-goods{
+  background: white;
+  font-size: xx-large;
+  height: 1em;
+  width: 1em;
+  border-radius: 50%;
+  display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.cell-products{
+  background-color: rgb(255, 255, 255);
   display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-content: center;
     align-items: flex-start;
+    margin: 10px;
+    padding: 5px;
+    cursor: pointer;
+    border: 2px solid white;
+    box-shadow: 0px 0px 13px 5px #00000047;
+}
+.frame-photo{
+  width: 250px;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+}
+.photo-products{
+  max-width: 250px;
+}
+.price-products{
+  text-decoration: underline;
+  font-size: x-large;
+  font-style: oblique;
+  margin: 0 auto;
+}
+.active-product{
+  background-color: rgb(204, 191, 155);
 }
