--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,6 @@
 body {
-  min-height: 100vh;
   background-color: rgb(223, 223, 223);
-  
+  margin: 0px;
 }
 .products{
   display: flex;
@@ -14,6 +13,24 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
+}
+.container{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.alert{
+  background-color: #333;
+    position: fixed;
+    width: 35%;
+    top: -100%;
+    display: flex;
+    transition: top 0.3s;
+    justify-content: center;
+    color: white;
+    box-shadow: 0px 0px 13px 18px rgb(0 0 0 / 35%);
+    text-align: center;
+    z-index: 10;
 }
 .basket{
   height: 50px;
@@ -29,8 +46,19 @@ body {
   width: 1em;
   border-radius: 50%;
   display: flex;
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
+}
+.filters{
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: flex-end;
+}
+.input-group{
+  width: 25rem !important;
 }
 .cell-products{
   background-color: rgb(255, 255, 255);
@@ -42,7 +70,6 @@ body {
     margin: 10px;
     padding: 5px;
     cursor: pointer;
-    border: 2px solid white;
     box-shadow: 0px 0px 13px 5px #00000047;
 }
 .frame-photo{
